Bug 133284 - Cursor keys don't work anymore in calc on iOS
Summary: Cursor keys don't work anymore in calc on iOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: notBibisectable, regression
Depends on:
Blocks:
 
Reported: 2020-05-22 17:54 UTC by Nicolas Christener
Modified: 2020-09-04 06:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2020-05-22 17:54:43 UTC
Description:
At some point we lost the possibility to use the curosor keys (on a hardware keyboard) to move the selected cell and also select a range of cells using shift + cursor keys.

Currently the cursor keys simply don't seem to work.

Steps to Reproduce:
1. Open a spreadsheet using the iOS app
2. Try to move the selected cell using the cursor key

Actual Results:
It's not possible to move the selected cell using the cursor key.

Expected Results:
It should be possible to move the selected cell using the cursor key and it should be possible to shrink/expand a selection with the cursor key + shift.


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested with 4.2.4 (55) on iPadOS 13.4.1
Comment 1 Aron Budea 2020-05-22 20:41:38 UTC
Confirmed, basically no hardware keyboard keys work when you're not in cell edit mode (but even cursor keys work when you're in cell edit mode).

This is interesting, because when it comes to the softare keyboard, you don't have one until you're in cell edit mode, however when you have a hardware keyboard, it should be active all the time, navigating with cursor keys should work, and pressing a character should start editing the cell.
Comment 2 How can I remove my account? 2020-08-31 08:54:48 UTC
If you get into the state where a cell is selected but you are not editing its contents, then the hardware cursor keys do move the selection. (And Shift + cursor keys extend/contract it.) This is with a current build of online:master + core:cp-6.4.
Comment 3 How can I remove my account? 2020-08-31 09:05:47 UTC
Hmm, but what I said in my comment above only works fairly randomly. Anyway, investigating.
Comment 4 How can I remove my account? 2020-08-31 12:44:53 UTC
Ha. When fixing bug #129327, I wrote "I am fairly sure this has some unintended unwanted side effect, though." And indeed, it seems that this bug is one such side effect. If I comment out what I added for bug #129327, the cursor keys work much more reliably in spreadsheet documents in the iOS app.
Comment 5 Commit Notification 2020-09-01 15:24:55 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/commit/3df718aac72138849ecafadc13f0207c3ec52283

tdf#133284: Improve hardware and on-screen keyboard in the iOS app
Comment 6 Nicolas Christener 2020-09-04 05:15:50 UTC
This is fixed now. I tested with iOS 4.2.8 (26).

Thanks a lot to the Collabora team and especially Tor for taking care of this!

I believe this issie can be closed now.